--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,25 @@ nav {
 }
 
 .logo {
-    font-size: 1.8rem;
-    font-weight: bold;
-    color: #e50914;
-    text-decoration: none;
+  display: flex;
+  align-items: center;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #fff;
+  font-size: 2rem;
+}
+
+.logo-img {
+  height: 40px;
+  width: auto;
+  margin-right: 10px;
+  border-radius: 25px;
+}
+
+.logo-text {
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 1px;
+  color: #9b8df5; /* puedes ajustar el color del texto */
 }
 
 .nav-links {
@@ -83,8 +98,7 @@ nav {
 /* HERO SECTION */
 .hero {
     height: 70vh;
-    background: linear-gradient(to bottom, rgba(0,0,0,0.5), #0f0f0f),
-                url('https://image.tmdb.org/t/p/original/placeholder.jpg') center/cover;
+    background: linear-gradient(to bottom, rgba(0,0,0,0.5), #0f0f0f), url('../assets/images/hero-bg.jpg') no-repeat center center/cover;
     display: flex;
     align-items: center;
     padding: 0 5%;
